    that of altering a small subset of objects, to
    leave in place the data from the larger enclosing
    set of objects that weren't modified in
    that sub-transaction.  [ticket:2452]

  - [feature] Added utility feature
    Session.enable_relationship_loading(),
    supersedes relationship.load_on_pending.
    Both features should be avoided, however.
    [ticket:2372]

  - [feature] Adding/removing None from a mapped collection
    now generates attribute events.  Previously, a None
    append would be ignored in some cases.  Related
    to [ticket:2229].

  - [feature] The presence of None in a mapped collection
    now raises an error during flush.   Previously,
    None values in collections would be silently ignored.
    [ticket:2229]

  - [feature] The Query.update() method is now
    more lenient as to the table
    being updated.  Plain Table objects are better
    supported now, and additional a joined-inheritance
    subclass may be used with update(); the subclass
    table will be the target of the update,
    and if the parent table is referenced in the
    WHERE clause, the compiler will call upon
    UPDATE..FROM syntax as allowed by the dialect
    to satisfy the WHERE clause.  MySQL's multi-table
    update feature is also supported if columns
    are specified by object in the "values" dicitionary.
    PG's DELETE..USING is also not available
    in Core yet.

  - [bug] Improvements to joined/subquery eager
    loading dealing with chains of subclass entities
    sharing a common base, with no specific "join depth"
    provided.  Will chain out to
    each subclass mapper individually before detecting
    a "cycle", rather than considering the base class
    to be the source of the "cycle".  [ticket:2481]

  - [bug] The "passive" flag on Session.is_modified()
    no longer has any effect. is_modified() in
    all cases looks only at local in-memory
    modified flags and will not emit any
    SQL or invoke loader callables/initializers.